# vello

./: Cargo.toml
examples/with_winit/: Cargo.toml
sparse_strips/vello_bench/: Cargo.toml
sparse_strips/vello_bench/src/: lib.rs
sparse_strips/vello_bench/src/blend2d/: app.rs  backend.rs  backend_vello_cpu.rs  cli.rs  json.rs  mod.rs  shapes.rs  sprites.rs  tests.rs
sparse_strips/vello_bench_blend2d/: Cargo.toml
sparse_strips/vello_bench_blend2d/src/: app.rs  backend.rs  backend_vello_cpu.rs  cli.rs  json.rs  main.rs  shapes.rs  tests.rs
sparse_strips/vello_common/src/: coarse.rs  flatten_simd.rs
sparse_strips/vello_cpu/examples/wasm_cpu/: Cargo.toml
sparse_strips/vello_cpu/src/: render.rs
sparse_strips/vello_cpu/src/dispatch/: multi_threaded.rs  single_threaded.rs
sparse_strips/vello_dev_macros/src/: test.rs
sparse_strips/vello_hybrid/: Cargo.toml
sparse_strips/vello_hybrid/examples/native_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/wgpu_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/winit/src/: render_context.rs
sparse_strips/vello_hybrid/src/: scene.rs
sparse_strips/vello_hybrid/src/render/: wgpu.rs
sparse_strips/vello_sparse_shaders/src/: types.rs
sparse_strips/vello_sparse_tests/: Cargo.toml
sparse_strips/vello_sparse_tests/tests/: renderer.rs
vello/src/: lib.rs  util.rs  wgpu_engine.rs
