[package]
name = "vello_bench"
description = "Benchmarking harness for sparse strips."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
criterion = { workspace = true }
parley = { version = "0.5.0", default-features = true }
rand = { workspace = true }
smallvec = { workspace = true }
usvg = { workspace = true }
vello_common = { workspace = true }
vello_cpu = { workspace = true, features = ["multithreading"] }
vello_dev_macros = { workspace = true }

[features]

[[bench]]
name = "main"
harness = false

[lints]
workspace = true
