[package]
name = "vello_bench_blend2d"
description = "Blend2D-compatible benchmarking harness for Vello CPU."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
owo-colors = "4.1.0"
rand = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
vello_common = { workspace = true }
vello_cpu = { workspace = true, features = ["multithreading"] }

[features]

[lints]
workspace = true
